--- a/pages/menu-alafrancaise.html
+++ b/pages/menu-alafrancaise.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a></i><h1>Ohmyfood</h1>
+            <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a><h1>Ohmyfood</h1>
         </nav>
         <!-- IMAGE SOUS LA NAV BAR -->
         <section class="en-tete-image">
@@ -158,7 +158,7 @@
             <li><i class="fa-solid fa-utensils"></i> Proposer un restaurant</li>
             <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
             <li>Mentions légales</li>
-            <li>Contact</li>
+            <li><a href="mailto:penneroux.alexandre36@gmail.com">Contact</a></li>
         </ul>
     </footer>
 </body>
