Modifications pour soutenance
Ajustement des tailles de texte, margin/padding, icone, retirer le nav sur index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="loader"></div>
     <header>
-        <nav><h1>ohmyfood</h1></nav>
+        <h1 class="titre-larg-max">ohmyfood</h1>
         <form class="input-lieu">
             <i class="fa-solid fa-location-dot"></i> 
             <input type="text" placeholder="Paris, Belleville">
@@ -32,7 +32,7 @@
             <ol>
                 <li><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</li>
                 <li><i class="fa-solid fa-list-ul"></i> Composez votre menu</li>
-                <li><i class="fa-solid fa-store"></i> Dégustez au restaurant</li>
+                <li class="important"><i class="fa-solid fa-store"></i> Dégustez au restaurant</li>
             </ol>
         </section>
         <section class="restaurant" id="restaurant">
