--- a/pages/menu-alafrancaise.html
+++ b/pages/menu-alafrancaise.html
@@ -38,7 +38,7 @@
                     <p class="price">25€</p>         
                 </div>
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 
             </article>
@@ -51,7 +51,7 @@
                     <p class="price">35€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
             <article class="list-plate">
@@ -63,7 +63,7 @@
                     <p class="price">20€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
             
@@ -77,7 +77,7 @@
                     <p class="price">40€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
             <article class="list-plate">
@@ -89,10 +89,9 @@
                     <p class="price">35€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
-
             <article class="list-plate">
                 <div class="list-plate__desc">
                     <div class="list-plate__titre"> 
@@ -102,7 +101,7 @@
                     <p class="price">44€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
 
@@ -116,10 +115,9 @@
                     <p class="price">18€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
-
             <article class="list-plate">
                 <div class="list-plate__desc">
                     <div class="list-plate__titre"> 
@@ -129,7 +127,7 @@
                     <p class="price">22€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
             <article class="list-plate">
@@ -141,7 +139,7 @@
                     <p class="price">23€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
 
