--- a/pages/menu-lanoteenchantee.html
+++ b/pages/menu-lanoteenchantee.html
@@ -38,7 +38,7 @@
                     <p class="price">25€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
             <article class="list-plate">
@@ -50,7 +50,7 @@
                     <p class="price">35€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
             <article class="list-plate">
@@ -62,7 +62,7 @@
                     <p class="price">20€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
             <article class="list-plate">
@@ -74,7 +74,7 @@
                     <p class="price">35€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
             
@@ -88,7 +88,7 @@
                     <p class="price">40€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
             <article class="list-plate">
@@ -100,7 +100,7 @@
                     <p class="price">35€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
 
@@ -113,7 +113,7 @@
                     <p class="price">44€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
 
@@ -127,7 +127,7 @@
                     <p class="price">18€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
 
@@ -140,7 +140,7 @@
                     <p class="price">22€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
 
@@ -153,7 +153,7 @@
                     <p class="price">23€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
             <div class="menu-restaurant-box">
