--- a/pages/menu-lapalettedugout.html
+++ b/pages/menu-lapalettedugout.html
@@ -38,7 +38,7 @@
                     <p class="price">25€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
         
@@ -51,7 +51,7 @@
                     <p class="price">35€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
 
@@ -59,12 +59,12 @@
                 <div class="list-plate__desc">
                     <div class="list-plate__titre"> 
                         <p class="titre-plat">Oeuf au plat</p>
-                        <p>Assaisonné à la truffe sur lit de quelquechose</p>
+                        <p>Assaisonné à la truffe sur lit de quelque</p>
                     </div>
                     <p class="price">20€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
             <h3><span class="soulign">Plat</span>s</h3>
@@ -77,7 +77,7 @@
                     <p class="price">40€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
             <article class="list-plate">
@@ -89,7 +89,7 @@
                     <p class="price">35€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
             <article class="list-plate">
@@ -101,7 +101,7 @@
                     <p class="price">44€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
 
@@ -116,7 +116,7 @@
                     <p class="price">18€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
             <article class="list-plate">
@@ -128,7 +128,7 @@
                     <p class="price">22€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
             <article class="list-plate">
@@ -140,7 +140,7 @@
                     <p class="price">23€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
             <div class="menu-restaurant-box">
