--- a/pages/menu-lesdelicesdenssens.html
+++ b/pages/menu-lesdelicesdenssens.html
@@ -38,7 +38,7 @@
                     <p class="price">25€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
             <article class="list-plate">
@@ -50,7 +50,7 @@
                     <p class="price">35€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
             <article class="list-plate">
@@ -62,7 +62,7 @@
                     <p class="price">20€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
             
@@ -76,7 +76,7 @@
                     <p class="price">40€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
 
@@ -89,7 +89,7 @@
                     <p class="price">35€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
 
@@ -102,7 +102,7 @@
                     <p class="price">44€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
 
@@ -116,7 +116,7 @@
                     <p class="price">18€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
             <article class="list-plate">
@@ -128,7 +128,7 @@
                     <p class="price">22€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
             <article class="list-plate">
@@ -140,7 +140,7 @@
                     <p class="price">23€</p> 
                 </div>          
                 <div class="add-cart">
-                    <i class="fa-regular fa-circle-check"></i>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>          
             </article>
             <div class="menu-restaurant-box">
